--- a/templates/base.html
+++ b/templates/base.html
@@ -46,9 +46,9 @@
 
             <!-- Menu Options -->
             <div class="nav-options center-row">
-                <a href="">About Me</a>
-                <a href="">Projects</a>
-                <a href="">Experience</a>
+                <a href="{% url 'about' %}">About Me</a>
+                <a href="{% url 'projects_list' %}">Projects</a> 
+                <a href="{% url 'experience_list' %}">Experience</a>
                 <a href="">Contact Me</a>
             </div>
         </nav>
