--- a/static/css/section.css
+++ b/static/css/section.css
@@ -26,3 +26,78 @@
     gap: 1rem;
     margin: 2rem 0;
 }
+
+/* Projects Section */
+
+.projects-section {
+    margin-top: 4rem;
+}
+
+.projects-list {
+    margin: 2rem 0px;
+    flex-wrap: wrap;
+    gap: 4rem;
+}
+
+.project-card {
+    width: 25rem;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0.5rem;
+}
+
+.project-card:hover {
+    opacity: 0.5;
+    border: solid 1px var(--primary-color);
+}
+
+.project-card img {
+    width: 100%;
+}
+
+.project-skills {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+a p:nth-child(2), .experience-card p:nth-child(1)  {
+    font-size: 1.5rem;
+    color: var(--secondary-color-600);
+    font-weight: bolder;
+    margin: 0.5rem 0px;
+}
+
+a p:nth-child(3), .experience-card p:nth-child(2) {
+    font-style: italic;
+}
+
+a p:nth-child(4), .experience-card p:nth-child(4) {
+    margin: 0.5rem 0px;
+    font-weight: bolder;
+    font-style: italic;
+    letter-spacing: 0.5rem;
+}
+
+/* Experience Section */
+
+.experience-section {
+    margin-top: 4rem;
+}
+
+.experience-card {
+    width: 25rem;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+    margin: 2rem 0px;
+    flex-direction: column;
+    border: solid red 1px;
+}
+
+.experience-skills {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1rem 0px;
+}
